syntax = "proto3";
option java_multiple_files = true;
package org.baeldung.grpc;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
    oneof valdesc{
    string value = 3;
    string value1 = 4;
    }
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc hello(HelloRequest) returns (HelloResponse);
}